polish typographycal errors during merge with dev branch

--- a/docs/source/notebooks/basic_usage.ipynb
+++ b/docs/source/notebooks/basic_usage.ipynb
@@ -20,16 +20,6 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "098049b9",
-   "metadata": {},
-   "source": [
-    "CAPIRE QUALI SONO QUALI COPPIE DI LIGANDI RECETTORI CHE COMPAIONO DOPO LIANA E NON COMPAIONO IN SCSEQCOMM R\n",
-    "fai lo unique di ligand&receptor\n",
-    "non dovremmo averli, perchè non sono presenti nel dataset"
-   ]
-  },
-  {
    "attachments": {},
    "cell_type": "markdown",
    "id": "b3589b06-5b9d-44bb-a962-02d87394d409",
@@ -89,10 +79,7 @@
     }
    ],
    "source": [
-    "import pandas as pd\n",
-    "adata = sc.datasets.pbmc68k_reduced()\n",
-    "\n",
-    "print(adata)"
+    "adata = sc.datasets.pbmc68k_reduced()"
    ]
   },
   {
@@ -215,7 +202,7 @@
     }
    ],
    "source": [
-    "print(adata.raw.X)"
+    "adata.raw.X"
    ]
   },
   {
@@ -651,14 +638,6 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "68ab345c",
-   "metadata": {},
-   "source": [
-    "HES4"
-   ]
-  },
-  {
    "attachments": {},
    "cell_type": "markdown",
    "id": "4debc169-6d38-4768-9fbc-afc0ca396741",
@@ -706,271 +685,7 @@
    ],
    "source": [
     "# run cellphonedb\n",
-    "cellphonedb(adata, groupby='bulk_labels', expr_prop=0.1, verbose=True, key_added='cpdb_res')\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
-   "id": "a708b81b",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>ligand</th>\n",
-       "      <th>ligand_complex</th>\n",
-       "      <th>ligand_means</th>\n",
-       "      <th>ligand_props</th>\n",
-       "      <th>receptor</th>\n",
-       "      <th>receptor_complex</th>\n",
-       "      <th>receptor_means</th>\n",
-       "      <th>receptor_props</th>\n",
-       "      <th>source</th>\n",
-       "      <th>target</th>\n",
-       "      <th>lr_means</th>\n",
-       "      <th>cellphone_pvals</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>482</th>\n",
-       "      <td>HLA-DRA</td>\n",
-       "      <td>HLA-DRA</td>\n",
-       "      <td>4.537684</td>\n",
-       "      <td>0.995833</td>\n",
-       "      <td>CD4</td>\n",
-       "      <td>CD4</td>\n",
-       "      <td>0.612842</td>\n",
-       "      <td>0.421053</td>\n",
-       "      <td>Dendritic</td>\n",
-       "      <td>CD4+/CD45RO+ Memory</td>\n",
-       "      <td>2.575263</td>\n",
-       "      <td>0.000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>321</th>\n",
-       "      <td>HLA-DRA</td>\n",
-       "      <td>HLA-DRA</td>\n",
-       "      <td>4.537684</td>\n",
-       "      <td>0.995833</td>\n",
-       "      <td>CD4</td>\n",
-       "      <td>CD4</td>\n",
-       "      <td>0.596125</td>\n",
-       "      <td>0.500000</td>\n",
-       "      <td>Dendritic</td>\n",
-       "      <td>CD4+/CD45RA+/CD25- Naive T</td>\n",
-       "      <td>2.566905</td>\n",
-       "      <td>0.000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>989</th>\n",
-       "      <td>HLA-DRA</td>\n",
-       "      <td>HLA-DRA</td>\n",
-       "      <td>4.537684</td>\n",
-       "      <td>0.995833</td>\n",
-       "      <td>CD4</td>\n",
-       "      <td>CD4</td>\n",
-       "      <td>0.483977</td>\n",
-       "      <td>0.302326</td>\n",
-       "      <td>Dendritic</td>\n",
-       "      <td>CD14+ Monocyte</td>\n",
-       "      <td>2.510830</td>\n",
-       "      <td>0.000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>651</th>\n",
-       "      <td>HLA-DRA</td>\n",
-       "      <td>HLA-DRA</td>\n",
-       "      <td>4.537684</td>\n",
-       "      <td>0.995833</td>\n",
-       "      <td>LAG3</td>\n",
-       "      <td>LAG3</td>\n",
-       "      <td>0.399500</td>\n",
-       "      <td>0.240741</td>\n",
-       "      <td>Dendritic</td>\n",
-       "      <td>CD8+ Cytotoxic T</td>\n",
-       "      <td>2.468592</td>\n",
-       "      <td>0.000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1392</th>\n",
-       "      <td>HLA-DRA</td>\n",
-       "      <td>HLA-DRA</td>\n",
-       "      <td>4.537684</td>\n",
-       "      <td>0.995833</td>\n",
-       "      <td>CD4</td>\n",
-       "      <td>CD4</td>\n",
-       "      <td>0.373671</td>\n",
-       "      <td>0.270833</td>\n",
-       "      <td>Dendritic</td>\n",
-       "      <td>Dendritic</td>\n",
-       "      <td>2.455678</td>\n",
-       "      <td>0.000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1148</th>\n",
-       "      <td>GNAI2</td>\n",
-       "      <td>GNAI2</td>\n",
-       "      <td>0.183538</td>\n",
-       "      <td>0.153846</td>\n",
-       "      <td>S1PR5</td>\n",
-       "      <td>S1PR5</td>\n",
-       "      <td>0.171846</td>\n",
-       "      <td>0.153846</td>\n",
-       "      <td>CD34+</td>\n",
-       "      <td>CD34+</td>\n",
-       "      <td>0.177692</td>\n",
-       "      <td>0.914</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1369</th>\n",
-       "      <td>TNFSF13B</td>\n",
-       "      <td>TNFSF13B</td>\n",
-       "      <td>0.212000</td>\n",
-       "      <td>0.153846</td>\n",
-       "      <td>CD40</td>\n",
-       "      <td>CD40</td>\n",
-       "      <td>0.142317</td>\n",
-       "      <td>0.100000</td>\n",
-       "      <td>CD34+</td>\n",
-       "      <td>Dendritic</td>\n",
-       "      <td>0.177158</td>\n",
-       "      <td>0.507</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>277</th>\n",
-       "      <td>LCK</td>\n",
-       "      <td>LCK</td>\n",
-       "      <td>0.192800</td>\n",
-       "      <td>0.126316</td>\n",
-       "      <td>CD8A</td>\n",
-       "      <td>CD8A_CD8B</td>\n",
-       "      <td>0.161000</td>\n",
-       "      <td>0.125000</td>\n",
-       "      <td>CD19+ B</td>\n",
-       "      <td>CD4+/CD45RA+/CD25- Naive T</td>\n",
-       "      <td>0.176900</td>\n",
-       "      <td>0.998</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>332</th>\n",
-       "      <td>LCK</td>\n",
-       "      <td>LCK</td>\n",
-       "      <td>0.169550</td>\n",
-       "      <td>0.116667</td>\n",
-       "      <td>CD8A</td>\n",
-       "      <td>CD8A_CD8B</td>\n",
-       "      <td>0.161000</td>\n",
-       "      <td>0.125000</td>\n",
-       "      <td>Dendritic</td>\n",
-       "      <td>CD4+/CD45RA+/CD25- Naive T</td>\n",
-       "      <td>0.165275</td>\n",
-       "      <td>1.000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>303</th>\n",
-       "      <td>GNAI2</td>\n",
-       "      <td>GNAI2</td>\n",
-       "      <td>0.183538</td>\n",
-       "      <td>0.153846</td>\n",
-       "      <td>S1PR5</td>\n",
-       "      <td>S1PR5</td>\n",
-       "      <td>0.125625</td>\n",
-       "      <td>0.125000</td>\n",
-       "      <td>CD34+</td>\n",
-       "      <td>CD4+/CD45RA+/CD25- Naive T</td>\n",
-       "      <td>0.154582</td>\n",
-       "      <td>0.931</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>1288 rows × 12 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "        ligand ligand_complex  ligand_means  ligand_props receptor  \\\n",
-       "482    HLA-DRA        HLA-DRA      4.537684      0.995833      CD4   \n",
-       "321    HLA-DRA        HLA-DRA      4.537684      0.995833      CD4   \n",
-       "989    HLA-DRA        HLA-DRA      4.537684      0.995833      CD4   \n",
-       "651    HLA-DRA        HLA-DRA      4.537684      0.995833     LAG3   \n",
-       "1392   HLA-DRA        HLA-DRA      4.537684      0.995833      CD4   \n",
-       "...        ...            ...           ...           ...      ...   \n",
-       "1148     GNAI2          GNAI2      0.183538      0.153846    S1PR5   \n",
-       "1369  TNFSF13B       TNFSF13B      0.212000      0.153846     CD40   \n",
-       "277        LCK            LCK      0.192800      0.126316     CD8A   \n",
-       "332        LCK            LCK      0.169550      0.116667     CD8A   \n",
-       "303      GNAI2          GNAI2      0.183538      0.153846    S1PR5   \n",
-       "\n",
-       "     receptor_complex  receptor_means  receptor_props     source  \\\n",
-       "482               CD4        0.612842        0.421053  Dendritic   \n",
-       "321               CD4        0.596125        0.500000  Dendritic   \n",
-       "989               CD4        0.483977        0.302326  Dendritic   \n",
-       "651              LAG3        0.399500        0.240741  Dendritic   \n",
-       "1392              CD4        0.373671        0.270833  Dendritic   \n",
-       "...               ...             ...             ...        ...   \n",
-       "1148            S1PR5        0.171846        0.153846      CD34+   \n",
-       "1369             CD40        0.142317        0.100000      CD34+   \n",
-       "277         CD8A_CD8B        0.161000        0.125000    CD19+ B   \n",
-       "332         CD8A_CD8B        0.161000        0.125000  Dendritic   \n",
-       "303             S1PR5        0.125625        0.125000      CD34+   \n",
-       "\n",
-       "                          target  lr_means  cellphone_pvals  \n",
-       "482          CD4+/CD45RO+ Memory  2.575263            0.000  \n",
-       "321   CD4+/CD45RA+/CD25- Naive T  2.566905            0.000  \n",
-       "989               CD14+ Monocyte  2.510830            0.000  \n",
-       "651             CD8+ Cytotoxic T  2.468592            0.000  \n",
-       "1392                   Dendritic  2.455678            0.000  \n",
-       "...                          ...       ...              ...  \n",
-       "1148                       CD34+  0.177692            0.914  \n",
-       "1369                   Dendritic  0.177158            0.507  \n",
-       "277   CD4+/CD45RA+/CD25- Naive T  0.176900            0.998  \n",
-       "332   CD4+/CD45RA+/CD25- Naive T  0.165275            1.000  \n",
-       "303   CD4+/CD45RA+/CD25- Naive T  0.154582            0.931  \n",
-       "\n",
-       "[1288 rows x 12 columns]"
-      ]
-     },
-     "execution_count": 12,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "adata.uns['cpdb_res']"
+    "cellphonedb(adata, groupby='bulk_labels', expr_prop=0.1, verbose=True, key_added='cpdb_res')"
    ]
   },
   {
@@ -1136,7 +851,7 @@
    ],
    "source": [
     "# by default, liana's output is saved in place:\n",
-    "adata.uns['cpdb_res'].head()\n"
+    "adata.uns['cpdb_res'].head()"
    ]
   },
   {
@@ -1250,7 +965,7 @@
     "              filterby='cellphone_pvals',\n",
     "              filter_lambda=lambda x: x <= 0.05,\n",
     "              uns_key='cpdb_res' # uns_key to use, default is 'liana_res' \n",
-    "             )\n"
+    "             )"
    ]
   },
   {
@@ -1316,7 +1031,7 @@
     "                         source_labels=['CD34+', 'CD56+ NK', 'CD14+ Monocyte'],\n",
     "                         target_labels=['CD34+', 'CD56+ NK'],\n",
     "                         uns_key='cpdb_res' # NOTE: default is 'liana_res'\n",
-    "                         ) \n"
+    "                         ) "
    ]
   },
   {
