multi-coordinate misty

--- a/sma_pre.ipynb
+++ b/sma_pre.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -65,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -85,7 +85,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# set x and y columns as index, concat with _ as separator\n",
+    "msi_raw.index = msi_raw[['x', 'y']].astype(str).agg('_'.join, axis=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -113,15 +123,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_151150/2697352618.py:2: FutureWarning: X.dtype being converted to np.float32 from float64. In the next version of anndata (0.9) conversion will not be automatic. Pass dtype explicitly to avoid this warning. Pass `AnnData(X, dtype=X.dtype, ...)` to get the future behavour.\n",
-      "/home/dbdimitrov/anaconda3/envs/spiana/lib/python3.10/site-packages/anndata/_core/anndata.py:121: ImplicitModificationWarning: Transforming to str index.\n"
+      "/tmp/ipykernel_43390/2697352618.py:2: FutureWarning: X.dtype being converted to np.float32 from float64. In the next version of anndata (0.9) conversion will not be automatic. Pass dtype explicitly to avoid this warning. Pass `AnnData(X, dtype=X.dtype, ...)` to get the future behavour.\n"
      ]
     }
    ],
@@ -134,7 +143,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -168,7 +177,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -177,7 +186,7 @@
        "608.9063"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -193,7 +202,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -214,7 +223,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -223,7 +232,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -233,7 +242,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -243,7 +252,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -270,7 +279,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -279,7 +288,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# msi.obs.index = msi.obsm['spatial']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -296,7 +314,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -323,21 +341,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -348,7 +352,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -376,51 +380,265 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/html": [
-       "<pre>MuData object with n_obs × n_vars = 6125 × 33823\n",
-       "  2 modalities\n",
-       "    rna:\t3120 x 32285\n",
-       "      obs:\t&#x27;in_tissue&#x27;, &#x27;array_row&#x27;, &#x27;array_col&#x27;, &#x27;x&#x27;, &#x27;y&#x27;, &#x27;lesion&#x27;, &#x27;region&#x27;\n",
-       "      var:\t&#x27;gene_ids&#x27;, &#x27;feature_types&#x27;, &#x27;genome&#x27;\n",
-       "      uns:\t&#x27;spatial&#x27;\n",
-       "      obsm:\t&#x27;spatial&#x27;\n",
-       "    msi:\t3005 x 1538\n",
-       "      obs:\t&#x27;leiden&#x27;, &#x27;array_row&#x27;, &#x27;array_col&#x27;, &#x27;x&#x27;, &#x27;y&#x27;\n",
-       "      var:\t&#x27;mean&#x27;, &#x27;std&#x27;\n",
-       "      uns:\t&#x27;spatial&#x27;, &#x27;leiden_colors&#x27;\n",
-       "      obsm:\t&#x27;X_pca&#x27;, &#x27;spatial&#x27;\n",
-       "      varm:\t&#x27;PCs&#x27;\n",
-       "      obsp:\t&#x27;distances&#x27;, &#x27;connectivities&#x27;</pre>"
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>rna:in_tissue</th>\n",
+       "      <th>rna:array_row</th>\n",
+       "      <th>rna:array_col</th>\n",
+       "      <th>rna:x</th>\n",
+       "      <th>rna:y</th>\n",
+       "      <th>rna:lesion</th>\n",
+       "      <th>rna:region</th>\n",
+       "      <th>msi:leiden</th>\n",
+       "      <th>msi:array_row</th>\n",
+       "      <th>msi:array_col</th>\n",
+       "      <th>msi:x</th>\n",
+       "      <th>msi:y</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>AAACAAGTATCTCCCA-1</th>\n",
+       "      <td>1.0</td>\n",
+       "      <td>50.0</td>\n",
+       "      <td>102.0</td>\n",
+       "      <td>34740.0</td>\n",
+       "      <td>30651.0</td>\n",
+       "      <td>lesioned</td>\n",
+       "      <td>striatum</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>AAACAGCTTTCAGAAG-1</th>\n",
+       "      <td>1.0</td>\n",
+       "      <td>43.0</td>\n",
+       "      <td>9.0</td>\n",
+       "      <td>7784.0</td>\n",
+       "      <td>27046.0</td>\n",
+       "      <td>intact</td>\n",
+       "      <td>not_striatum</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>AAACATTTCCCGGATT-1</th>\n",
+       "      <td>1.0</td>\n",
+       "      <td>61.0</td>\n",
+       "      <td>97.0</td>\n",
+       "      <td>33275.0</td>\n",
+       "      <td>36197.0</td>\n",
+       "      <td>lesioned</td>\n",
+       "      <td>striatum</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>AAACCCGAACGAAATC-1</th>\n",
+       "      <td>1.0</td>\n",
+       "      <td>45.0</td>\n",
+       "      <td>115.0</td>\n",
+       "      <td>38516.0</td>\n",
+       "      <td>28139.0</td>\n",
+       "      <td>lesioned</td>\n",
+       "      <td>not_striatum</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>AAACCGGAAATGTTAA-1</th>\n",
+       "      <td>1.0</td>\n",
+       "      <td>54.0</td>\n",
+       "      <td>124.0</td>\n",
+       "      <td>41113.0</td>\n",
+       "      <td>32686.0</td>\n",
+       "      <td>lesioned</td>\n",
+       "      <td>not_striatum</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>62_26</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0</td>\n",
+       "      <td>54.0</td>\n",
+       "      <td>72.0</td>\n",
+       "      <td>31236.893190</td>\n",
+       "      <td>41649.19092</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>62_27</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0</td>\n",
+       "      <td>53.0</td>\n",
+       "      <td>72.0</td>\n",
+       "      <td>30658.432205</td>\n",
+       "      <td>41649.19092</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>62_28</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0</td>\n",
+       "      <td>52.0</td>\n",
+       "      <td>72.0</td>\n",
+       "      <td>30079.971220</td>\n",
+       "      <td>41649.19092</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>62_29</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0</td>\n",
+       "      <td>51.0</td>\n",
+       "      <td>72.0</td>\n",
+       "      <td>29501.510235</td>\n",
+       "      <td>41649.19092</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>62_30</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0</td>\n",
+       "      <td>50.0</td>\n",
+       "      <td>72.0</td>\n",
+       "      <td>28923.049250</td>\n",
+       "      <td>41649.19092</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>6125 rows × 12 columns</p>\n",
+       "</div>"
       ],
       "text/plain": [
-       "MuData object with n_obs × n_vars = 6125 × 33823\n",
-       "  2 modalities\n",
-       "    rna:\t3120 x 32285\n",
-       "      obs:\t'in_tissue', 'array_row', 'array_col', 'x', 'y', 'lesion', 'region'\n",
-       "      var:\t'gene_ids', 'feature_types', 'genome'\n",
-       "      uns:\t'spatial'\n",
-       "      obsm:\t'spatial'\n",
-       "    msi:\t3005 x 1538\n",
-       "      obs:\t'leiden', 'array_row', 'array_col', 'x', 'y'\n",
-       "      var:\t'mean', 'std'\n",
-       "      uns:\t'spatial', 'leiden_colors'\n",
-       "      obsm:\t'X_pca', 'spatial'\n",
-       "      varm:\t'PCs'\n",
-       "      obsp:\t'distances', 'connectivities'"
+       "                    rna:in_tissue  rna:array_row  rna:array_col    rna:x  \\\n",
+       "AAACAAGTATCTCCCA-1            1.0           50.0          102.0  34740.0   \n",
+       "AAACAGCTTTCAGAAG-1            1.0           43.0            9.0   7784.0   \n",
+       "AAACATTTCCCGGATT-1            1.0           61.0           97.0  33275.0   \n",
+       "AAACCCGAACGAAATC-1            1.0           45.0          115.0  38516.0   \n",
+       "AAACCGGAAATGTTAA-1            1.0           54.0          124.0  41113.0   \n",
+       "...                           ...            ...            ...      ...   \n",
+       "62_26                         NaN            NaN            NaN      NaN   \n",
+       "62_27                         NaN            NaN            NaN      NaN   \n",
+       "62_28                         NaN            NaN            NaN      NaN   \n",
+       "62_29                         NaN            NaN            NaN      NaN   \n",
+       "62_30                         NaN            NaN            NaN      NaN   \n",
+       "\n",
+       "                      rna:y rna:lesion    rna:region msi:leiden  \\\n",
+       "AAACAAGTATCTCCCA-1  30651.0   lesioned      striatum        NaN   \n",
+       "AAACAGCTTTCAGAAG-1  27046.0     intact  not_striatum        NaN   \n",
+       "AAACATTTCCCGGATT-1  36197.0   lesioned      striatum        NaN   \n",
+       "AAACCCGAACGAAATC-1  28139.0   lesioned  not_striatum        NaN   \n",
+       "AAACCGGAAATGTTAA-1  32686.0   lesioned  not_striatum        NaN   \n",
+       "...                     ...        ...           ...        ...   \n",
+       "62_26                   NaN        NaN           NaN          0   \n",
+       "62_27                   NaN        NaN           NaN          0   \n",
+       "62_28                   NaN        NaN           NaN          0   \n",
+       "62_29                   NaN        NaN           NaN          0   \n",
+       "62_30                   NaN        NaN           NaN          0   \n",
+       "\n",
+       "                    msi:array_row  msi:array_col         msi:x        msi:y  \n",
+       "AAACAAGTATCTCCCA-1            NaN            NaN           NaN          NaN  \n",
+       "AAACAGCTTTCAGAAG-1            NaN            NaN           NaN          NaN  \n",
+       "AAACATTTCCCGGATT-1            NaN            NaN           NaN          NaN  \n",
+       "AAACCCGAACGAAATC-1            NaN            NaN           NaN          NaN  \n",
+       "AAACCGGAAATGTTAA-1            NaN            NaN           NaN          NaN  \n",
+       "...                           ...            ...           ...          ...  \n",
+       "62_26                        54.0           72.0  31236.893190  41649.19092  \n",
+       "62_27                        53.0           72.0  30658.432205  41649.19092  \n",
+       "62_28                        52.0           72.0  30079.971220  41649.19092  \n",
+       "62_29                        51.0           72.0  29501.510235  41649.19092  \n",
+       "62_30                        50.0           72.0  28923.049250  41649.19092  \n",
+       "\n",
+       "[6125 rows x 12 columns]"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "mdata"
+    "mdata.obs"
    ]
   },
   {
