--- a/docs/source/notebooks/misty.ipynb
+++ b/docs/source/notebooks/misty.ipynb
@@ -546,7 +546,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 1/1 [00:04<00:00,  4.16s/it]\n"
+      "100%|██████████| 1/1 [00:03<00:00,  3.42s/it]\n"
      ]
     }
    ],
@@ -711,7 +711,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Now learning: Vascular_SMCs: 100%|██████████| 11/11 [00:37<00:00,  3.38s/it]\n"
+      "Now learning: Vascular_SMCs: 100%|██████████| 11/11 [00:32<00:00,  2.96s/it]\n"
      ]
     }
    ],
@@ -865,7 +865,7 @@
     {
      "data": {
       "text/plain": [
-       "<ggplot: (8788013768819)>"
+       "<ggplot: (8726818508485)>"
       ]
      },
      "execution_count": 19,
@@ -903,7 +903,7 @@
     {
      "data": {
       "text/plain": [
-       "<ggplot: (8788013717580)>"
+       "<ggplot: (8726796691844)>"
       ]
      },
      "execution_count": 20,
@@ -925,7 +925,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -941,16 +941,16 @@
     {
      "data": {
       "text/plain": [
-       "<ggplot: (8788013850039)>"
+       "<ggplot: (8726818577595)>"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "li.pl.contributions(misty, return_fig=True, stat='intra_R2')"
+    "li.pl.contributions(misty, return_fig=True)"
    ]
   },
   {
@@ -964,7 +964,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -1043,7 +1043,7 @@
        "4  Adipocytes            Mast  intra     0.131783"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1055,7 +1055,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -1073,10 +1073,10 @@
     {
      "data": {
       "text/plain": [
-       "<ggplot: (8788032539645)>"
+       "<ggplot: (8726818095654)>"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1107,14 +1107,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Now learning: Vascular_SMCs: 100%|██████████| 11/11 [00:04<00:00,  2.68it/s]\n"
+      "Now learning: Vascular_SMCs: 100%|██████████| 11/11 [00:04<00:00,  2.22it/s]\n"
      ]
     }
    ],
@@ -1132,7 +1132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -1148,10 +1148,10 @@
     {
      "data": {
       "text/plain": [
-       "<ggplot: (8788013661263)>"
+       "<ggplot: (8726818751089)>"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1170,7 +1170,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -1186,10 +1186,10 @@
     {
      "data": {
       "text/plain": [
-       "<ggplot: (8788006520472)>"
+       "<ggplot: (8726818834514)>"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1210,7 +1210,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -1228,10 +1228,10 @@
     {
      "data": {
       "text/plain": [
-       "<ggplot: (8788024998375)>"
+       "<ggplot: (8726818834829)>"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1287,7 +1287,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1297,7 +1297,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -1311,7 +1311,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 1/1 [00:01<00:00,  1.64s/it]\n"
+      "100%|██████████| 1/1 [00:01<00:00,  1.08s/it]\n"
      ]
     }
    ],
@@ -1327,7 +1327,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1347,7 +1347,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1365,7 +1365,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -1383,10 +1383,10 @@
     {
      "data": {
       "text/plain": [
-       "<ggplot: (8788013688643)>"
+       "<ggplot: (8726818776701)>"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1397,7 +1397,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1417,7 +1417,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -1436,7 +1436,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -1480,7 +1480,7 @@
        "      obsp:\t'spatial_connectivities'"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1499,14 +1499,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Now learning: Vascular_SMCs: 100%|██████████| 11/11 [00:37<00:00,  3.37s/it]\n"
+      "Now learning: Vascular_SMCs: 100%|██████████| 11/11 [01:14<00:00,  6.75s/it]\n"
      ]
     }
    ],
@@ -1524,7 +1524,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -1540,10 +1540,10 @@
     {
      "data": {
       "text/plain": [
-       "<ggplot: (8788013825760)>"
+       "<ggplot: (8726807255857)>"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1562,7 +1562,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
@@ -1578,10 +1578,10 @@
     {
      "data": {
       "text/plain": [
-       "<ggplot: (8788024986069)>"
+       "<ggplot: (8726818551010)>"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1600,7 +1600,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
@@ -1616,10 +1616,10 @@
     {
      "data": {
       "text/plain": [
-       "<ggplot: (8788006606299)>"
+       "<ggplot: (8726796758497)>"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1661,7 +1661,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1679,7 +1679,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
@@ -1696,17 +1696,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Now learning: CHL1:  25%|██▍       | 22/89 [00:05<00:18,  3.54it/s]      /home/dbdimitrov/anaconda3/envs/spiana/lib/python3.10/site-packages/liana/method/sp/_Misty.py:326: RuntimeWarning: invalid value encountered in true_divide\n",
-      "Now learning: NPR3:  46%|████▌     | 41/89 [00:11<00:12,  3.77it/s]       /home/dbdimitrov/anaconda3/envs/spiana/lib/python3.10/site-packages/liana/method/sp/_Misty.py:326: RuntimeWarning: invalid value encountered in true_divide\n",
-      "Now learning: CLEC12A:  92%|█████████▏| 82/89 [00:22<00:01,  3.86it/s]  /home/dbdimitrov/anaconda3/envs/spiana/lib/python3.10/site-packages/liana/method/sp/_Misty.py:326: RuntimeWarning: invalid value encountered in true_divide\n",
-      "Now learning: CSF3R: 100%|██████████| 89/89 [00:23<00:00,  3.73it/s]  \n"
+      "Now learning: CHL1:  25%|██▍       | 22/89 [00:14<00:44,  1.52it/s]      /home/dbdimitrov/anaconda3/envs/spiana/lib/python3.10/site-packages/liana/method/sp/_Misty.py:343: RuntimeWarning: invalid value encountered in true_divide\n",
+      "Now learning: NPR3:  46%|████▌     | 41/89 [00:27<00:34,  1.40it/s]       /home/dbdimitrov/anaconda3/envs/spiana/lib/python3.10/site-packages/liana/method/sp/_Misty.py:343: RuntimeWarning: invalid value encountered in true_divide\n",
+      "Now learning: CLEC12A:  92%|█████████▏| 82/89 [00:59<00:06,  1.15it/s]  /home/dbdimitrov/anaconda3/envs/spiana/lib/python3.10/site-packages/liana/method/sp/_Misty.py:343: RuntimeWarning: invalid value encountered in true_divide\n",
+      "Now learning: CSF3R: 100%|██████████| 89/89 [01:04<00:00,  1.38it/s]  \n"
      ]
     }
    ],
@@ -1724,7 +1724,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
@@ -1742,10 +1742,10 @@
     {
      "data": {
       "text/plain": [
-       "<ggplot: (8788010610103)>"
+       "<ggplot: (8726796691982)>"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 44,
      "metadata": {},
      "output_type": "execute_result"
     }
